Fixando overflow no safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ h2 {
 
 html {
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 .sm h2, .pj h2, .hb h2 {
